# watchdocr-overlay

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-release.yml
common/: command.py  event.py  observable.py  observer.py  pipeline.py  service.py  task.py  translate.py  worker.py
common/utils/: __init__.py  collections.py  construct.py  enums.py  exception.py  logger.py  meta.py  observable.py  path.py  schedule.py  system.py  validation.py  values.py
config/: __init__.py  base.py  default.py  preferences.py
frontend/: OCROverlay.qml  core.py  qresources.py  resources.qrc  window.qml
frontend/common/: mvvm.py  mvvm_qml.py
frontend/components/: ControlToolBar.qml  OCRTextArea.qml  SelectionArea.qml
frontend/ui/: Component.qml  DebugPanel.qml  Gui.qml  MainWindow.qml  OCROverlay.qml  WatchdOcr.qml  Window.qml  WindowHotReload.qml  tray.py  window.qml
frontend/ui/components/: ControlToolBar.qml  DebugPanel.qml  OCRTextArea.qml  (+9 more)
frontend/utils/: ghotkey.py  screen.py
frontend/viewmodels/: __init__.py  core.py  ocroverlay.py  window.py
qt/: core.py  gui.py  qml.py  utils.py
shortcuts/: qml_hotreload.py
src/: app.py  context.py  core.py
src/common/: api.py  event.py  plugin.py
src/grabber/: service.py  window.py
src/ocr/: filtering.py  ocr.py  ocrtranslate.py  service.py  spell.py  window.py
src/ocrtranslate/: service.py
src/tocr/: manager.py  ocrtranslate.py  service.py
src/translator/: service.py  translate.py  types.py
src/utils/: sysbehavior.py
tools/: resources.py
tools/compile/: compiler.py
(+99 files in other folders)
